--- a/_patterns/components/cards.html
+++ b/_patterns/components/cards.html
@@ -6,88 +6,130 @@ description: The HRS card.
 show_source: true
 ---
 
+<main style="margin-left: 0;">
+
 <section class="recent-articles">
 	<article class="feature hentry category-uncategorized">
+		<header class="article-header">
+			<h2 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h2>
+			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
+		</header>
 		<figure class="article-image">
 			<a href="#">
 				<img width="400" src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<header class="article-header">
-			<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
-			<a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a>
-			<a class="article-categories" href="#" rel="tag">Category</a>
-			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
-		</header>
 		<div class="article-excerpt">
-			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <a href="#"><span class="excerpt-more-default">... More →</span></a></p>
+			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <span class="excerpt-more-default">...</span></p>
 		</div>
+		<footer class="article-footer">
+			<dl class="article-taxonomy hrs_unit">
+				<dt>HRS Units</dt>
+				<dd><a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a></dd>
+				<dd><a class="article-categories" href="#" rel="tag">Category</a></dd>
+			</span>
+		</footer>
 	</article>
-	<article class="span hentry category-uncategorized">
+	<article class="feature hentry category-uncategorized">
+		<header class="article-header">
+			<h2 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h2>
+			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
+		</header>
 		<figure class="article-image">
 			<a href="#">
 				<img width="400" src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<header class="article-header">
-			<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
-			<a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a>
-			<a class="article-categories" href="#" rel="tag">Category</a>
-			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
-		</header>
 		<div class="article-excerpt">
-			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <a href="#"><span class="excerpt-more-default">... More →</span></a></p>
+			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <span class="excerpt-more-default">...</span></p>
 		</div>
+		<footer class="article-footer">
+			<dl class="article-taxonomy hrs_unit">
+				<dt>HRS Units</dt>
+				<dd><a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a></dd>
+				<dd><a class="article-categories" href="#" rel="tag">Category</a></dd>
+			</span>
+		</footer>
 	</article>
-	<article class="hentry category-uncategorized">
+	<article class="feature hentry category-uncategorized">
+		<header class="article-header">
+			<h2 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h2>
+			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
+		</header>
 		<figure class="article-image">
 			<a href="#">
 				<img width="400" src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<header class="article-header">
-			<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
-			<a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a>
-			<a class="article-categories" href="#" rel="tag">Category</a>
-			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
-		</header>
 		<div class="article-excerpt">
-			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <a href="#"><span class="excerpt-more-default">... More →</span></a></p>
+			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <span class="excerpt-more-default">...</span></p>
 		</div>
+		<footer class="article-footer">
+			<dl class="article-taxonomy hrs_unit">
+				<dt>HRS Units</dt>
+				<dd><a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a></dd>
+				<dd><a class="article-categories" href="#" rel="tag">Category</a></dd>
+			</span>
+		</footer>
 	</article>
 </section>
 
 <h2>Mixed Content Types</h2>
+
 <section class="recent-articles">
+
 	<article>
-		<img src="http://hrsdev.hrs.wsu.edu/wp-content/uploads/2017/09/map_darkgray_64px.png" alt="" width="64" height="64" class="aligncenter size-full wp-image-8095" />
-		<p class="article-title">Orientation</p>
-		<p>Visit HRS Training to <a href="http://hrs.wsu.edu/training/orientation-schedule/">sign up for New Employee Orientation</a></p>.
-		<a class="hrs-button hrs-button-white" href="http://hrs.wsu.edu/training/orientation-schedule/">LEARN MORE</a>
+		<header class="article-header">
+			<p class="article-title">Orientation</p>
+		</header>
+		<figure class="article-image">
+			<img src="http://hrsdev.hrs.wsu.edu/wp-content/uploads/2017/09/map_darkgray_64px.png" alt="" width="64" height="64" class="aligncenter size-full wp-image-8095" />
+		</figure>
+		<div class="article-excerpt">
+			<p>Visit HRS Training to <a href="http://hrs.wsu.edu/training/orientation-schedule/">sign up for New Employee Orientation</a>.</p>
+			<a class="button" href="http://hrs.wsu.edu/training/orientation-schedule/">Orientation Sign Up</a>
+		</div>
 	</article>
+
 	<article>
-		<img src="http://hrsdev.hrs.wsu.edu/wp-content/uploads/2017/09/31-days-calendar.png" alt="" width="90" height="95" class="aligncenter size-full wp-image-8097" />
-		<p class="article-title">Orientation</p>
-		<p>Visit HRS Training to <a href="http://hrs.wsu.edu/training/orientation-schedule/">sign up for New Employee Orientation</a></p>.
-		<a class="hrs-button hrs-button-white" href="http://hrs.wsu.edu/training/orientation-schedule/">LEARN MORE</a>
+		<header class="article-header">
+			<p class="article-title">Orientation</p>
+		</header>
+		<figure class="article-image">
+			<img src="http://hrsdev.hrs.wsu.edu/wp-content/uploads/2017/09/31-days-calendar.png" alt="" width="90" height="95" class="aligncenter size-full wp-image-8097" />
+		</figure>
+		<div class="article-excerpt">
+			<p>Visit HRS Training to <a href="http://hrs.wsu.edu/training/orientation-schedule/">sign up for New Employee Orientation</a>.</p>
+			<a class="button-flat" href="http://hrs.wsu.edu/training/orientation-schedule/">New Employee Orientation</a>
+		</div>
 	</article>
-	<article class="hentry category-uncategorized">
+
+	<article class="feature hentry category-uncategorized">
+		<header class="article-header">
+			<h2 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h2>
+			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
+		</header>
 		<figure class="article-image">
 			<a href="#">
 				<img width="400" src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<header class="article-header">
-			<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
-			<a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a>
-			<a class="article-categories" href="#" rel="tag">Category</a>
-			<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
-		</header>
 		<div class="article-excerpt">
-			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <a href="#"><span class="excerpt-more-default">... More →</span></a></p>
+			<p>With the academic year drawing to a close, it is time for managers to make plans for summer schedules. Washington <span class="excerpt-more-default">...</span></p>
 		</div>
+		<footer class="article-footer">
+			<dl class="article-taxonomy hrs_unit">
+				<dt>HRS Units</dt>
+				<dd><a class="article-hrs-unit" href="#" rel="tag">HRS Unit</a></dd>
+				<dd><a class="article-categories" href="#" rel="tag">Category</a></dd>
+			</span>
+		</footer>
 	</article>
+
 	<article>
+		<header class="article-header">
+			<p class="article-title">A Data Table</p>
+		</header>
 		<table id="color-table">
 			<thead>
 				<tr>
@@ -124,8 +166,11 @@ show_source: true
 				</tr>
 			</tbody>
 		</table>
-		<p class="article-title">Orientation</p>
-		<p>Visit HRS Training to <a href="http://hrs.wsu.edu/training/orientation-schedule/">sign up for New Employee Orientation</a></p>.
-		<a class="hrs-button hrs-button-white" href="http://hrs.wsu.edu/training/orientation-schedule/">LEARN MORE</a>
+		<div class="article-excerpt">
+			<p>Visit HRS Training to <a href="http://hrs.wsu.edu/training/orientation-schedule/">sign up for New Employee Orientation</a>.</p>
+			<a class="button-cta" href="http://hrs.wsu.edu/training/orientation-schedule/">Call to Action</a>
+		</div>
 	</article>
 </section>
+
+</main>
