--- a/_patterns/components/modules.html
+++ b/_patterns/components/modules.html
@@ -13,32 +13,32 @@ show_source: true
 	<p>Regular module content just communicates some things in a clear way.</p>
 </div>
 
-<div class="action-module">
+<div class="module--cta">
 	<h3 class="module-title">Call to Action Module</h3>
 	<p>The call to action module is bolder than the regular module. It should also call for some kind of action from the user.</p>
 	<a href="#" class="button">Take Action</a>
 	<a href="#" class="button-flat">Or not</a>
 </div>
 
-<div class="alert-module">
+<div class="module--alert">
 	<svg height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
 	<h3 class="module-title">Alert Module</h3>
 	<p>The alert module can be positive or negative, but is always eye-catching.</p>
 </div>
 
-<div class="alert-module positive">
+<div class="module--alert positive">
 	<svg height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
 	<h3 class="module-title">Alert Module: Positive</h3>
 	<p>The alert module can be positive or negative, but is always eye-catching.</p>
 </div>
 
-<div class="alert-module caution">
+<div class="module--alert caution">
 	<svg height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>
 	<h3 class="module-title">Alert Module: Caution</h3>
 	<p>The alert module can be positive or negative, but is always eye-catching.</p>
 </div>
 
-<div class="alert-module warning">
+<div class="module--alert warning">
 	<svg height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/></svg>
 	<h3 class="module-title">Alert Module: Warning</h3>
 	<p>The alert module can be positive or negative, but is always eye-catching.</p>
