--- a/_patterns/components/notifications.html
+++ b/_patterns/components/notifications.html
@@ -10,14 +10,14 @@ show_source: true
 	<p>This is a neutral notification.</p>
 </div>
 
-<aside class="positive-notification">
+<aside class="notification--positive">
 	<p>A notification about something positive.</p>
 </aside>
 
-<div class="caution-notification">
+<div class="notification--caution">
 	<p>A notification denoting caution.</p>
 </div>
 
-<div class="warning-notification">
+<div class="notification--warning">
 	<p>A warning or error notification.</p>
 </div>
