--- a/_patterns/components/row-lists.html
+++ b/_patterns/components/row-lists.html
@@ -7,26 +7,26 @@ show_source: true
 ---
 
 <section class="articles-list">
-	<article class="feature hentry category-uncategorized">
+	<article class="list-item feature hentry category-uncategorized">
 		<figure class="article-image">
 			<a href="#">
 				<img src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<div class="row-item-content">
+		<div class="list-content">
 			<header class="article-header">
 				<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
 				<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
 			</header>
 		</div>
 	</article>
-	<article class="hentry category-uncategorized">
+	<article class="list-item hentry category-uncategorized">
 		<figure class="article-image">
 			<a href="#">
 				<img width="400" src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<div class="row-item-content">
+		<div class="list-content">
 			<header class="article-header">
 				<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
 				<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
@@ -36,13 +36,13 @@ show_source: true
 			</div>
 		</div>
 	</article>
-	<article class="hentry category-uncategorized">
+	<article class="list-item hentry category-uncategorized">
 		<figure class="article-image">
 			<a href="#">
 				<img width="400" src="{{ 'assets/images/photo_coffee-and-notebooks.jpg' | relative_url }}" alt="A paper coffe cup with a lid and a stack of notebooks on a low brick wall.">
 			</a>
 		</figure>
-		<div class="row-item-content">
+		<div class="list-content">
 			<header class="article-header">
 				<h3 class="article-title"><a href="#" rel="bookmark">Notice of Summer Hours</a></h3>
 				<time class="article-date" datetime="2018-01-30T10:27:25+00:00">January 30, 2018</time>
