--- a/_patterns/components/data-tables.html
+++ b/_patterns/components/data-tables.html
@@ -6,7 +6,9 @@ description: The HRS grid list.
 show_source: true
 ---
 
-<table id="color-table">
+<main style="margin-left: 0;">
+
+<table>
 	<thead>
 		<tr>
 			<th>Dessert</th>
@@ -76,3 +78,76 @@ show_source: true
 		</tr>
 	</tbody>
 </table>
+
+<table class="striped">
+	<thead>
+		<tr>
+			<th>Dessert</th>
+			<th>Type</th>
+			<th>Calories</th>
+			<th>Fat (g)</th>
+			<th>Iron (% dv)</th>
+			<th>Cost</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Frozen yogurt</td>
+			<td>Frozen</td>
+			<td>159</td>
+			<td>6.0</td>
+			<td>1%</td>
+			<td>$3.59</td>
+		</tr>
+		<tr>
+			<td>Ice cream sandwich</td>
+			<td>Frozen</td>
+			<td>237</td>
+			<td>9.0</td>
+			<td>1%</td>
+			<td>$2.32</td>
+		</tr>
+		<tr>
+			<td>Gingerbread</td>
+			<td>Cookie</td>
+			<td>356</td>
+			<td>16.0</td>
+			<td>16%</td>
+			<td>$1.50</td>
+		</tr>
+		<tr>
+			<td>Donut</td>
+			<td>Pastry</td>
+			<td>452</td>
+			<td>25.0</td>
+			<td>22%</td>
+			<td>$0.99</td>
+		</tr>
+		<tr>
+			<td>Eclair</td>
+			<td>Pastry</td>
+			<td>262</td>
+			<td>16.0</td>
+			<td>7%</td>
+			<td>$2.75</td>
+		</tr>
+		<tr>
+			<td>Cupcake</td>
+			<td>Cake</td>
+			<td>305</td>
+			<td>3.7</td>
+			<td>8%</td>
+			<td>$2.50</td>
+		</tr>
+		<tr>
+			<td>Lollipop</td>
+			<td>Candy</td>
+			<td>392</td>
+			<td>0.2</td>
+			<td>2%</td>
+			<td>$0.75</td>
+		</tr>
+	</tbody>
+</table>
+
+</main>
