Use smaller text size

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
     </section>
 
     <section>
-        <p>{{- site.description | escape -}}</p>
+        <p><small>{{- site.description | escape -}}</small></p>
         <data class="u-url" href="{{ "/" | relative_url }}"></data>
     </section>
 
