Retain spaces between stylesheets loop

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
     {%- seo -%}
     {%- for item in site.data.stylesheets.styles -%}
         {%- if 'ui' == item.group -%}
-            {%- for css in item.sheets -%}
+            {% for css in item.sheets %}
                 <link rel="stylesheet" id="{{ css.name | slugify }}" href="{{ css.url | relative_url }}?v{{ site.version }}" {%- if css.type -%}type="{{ css.type | encode }}"{%- endif -%}{%- if css.media -%}media="{{ css.media | encode }}"{%- endif -%}>
-            {%- endfor -%}
+            {% endfor %}
         {%- endif -%}
     {%- endfor -%}
     {%- feed_meta -%}
