--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -17,7 +17,7 @@ $base-font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif !default;
 $mono-font-family: "IBM Plex Mono", monospace !default;
 $base-font-size:   1rem !default;
 $base-font-weight: 400 !default;
-$small-font-size:  $base-font-size * 0.875 !default;
+$small-font-size:  $base-font-size !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
