--- a/_sass/partials/_syntax-highlighting.scss
+++ b/_sass/partials/_syntax-highlighting.scss
@@ -46,6 +46,7 @@ pre {
 .highlight {
   background: $dt-gray-dark;
   color: $dt-gray-light;
+  margin-bottom: 1.5em;
 
   .highlighter-rouge & {
       background: $dt-gray-dark;
